--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
             <li>c</li>
             <li>learning css and java script</li>
         </ol>
-    <a href="/contact.html">contact me</a>
+    <a href="./contact.html">contact me</a>
 </body>
 </html>
